attached_assets/Pasted-sipantichijk-penguin-church-project-SoC-Check-if-LPF-ex_1780431394948.txt
sipantichijk@penguin:~/church_project/SoC$ # Check if LPF exists (generate() succeeded before the crash)
find ~/church_project/SoC -name "*.lpf" -newer ~/church_project/SoC/outflow/church_soc_cm.vdb 2>/dev/null
ls -lt ~/church_project/SoC/outflow/ | head -12

# Patch efx_run_pt_unified.py to wrap the timing netlist export in try/except
python3 - << 'EOF'
path = '/home/sipantichijk/efinity/2026.1/scripts/efx_run_pt_unified.py'
with open(path, 'r') as f:
    content = f.read()

old = "            design_api.export_periphery_timing_netlist(peri_pbn, peri_qdelay, peri_csi, peri_cdo)"
new = ("            try:\n"
       "                design_api.export_periphery_timing_netlist(peri_pbn, peri_qdelay, peri_csi, peri_cdo)\n"
       "            except Exception as _pt_exc:\n"
       "                print(f'WARNING: timing netlist export skipped (headless patch): {_pt_exc}')")

if old in content:
    with open(path, 'w') as f:
        f.write(content.replace(old, new, 1))
    print("PATCHED OK")
else:
    for i, line in enumerate(content.split('\n')[325:345], start=325):
        print(f"{i}: {repr(line)}")
EOF

# Full flow retry
$EFINITY_HOME/bin/python3 $EFINITY_HOME/scripts/efx_run_pt_unified.py \
    church_soc_cm Titanium Ti60F225 \
    --output_dir outflow --timing_model C3 \
    --project_xml church_soc_cm.xml 2>&1

# Check for hex/bit/lpf
ls -lh outflow/church_soc_cm.hex outflow/church_soc_cm.bit 2>/dev/null && echo "=== HEX ===" || true
find ~/church_project/SoC/outflow -name "*.lpf" 2>/dev/null

# Run pgm if LPF appeared
$EFINITY_HOME/bin/efx_run church_soc_cm --prj \
    --flow pgm --family Titanium --device Ti60F225 2>&1
ls -lh outflow/church_soc_cm.hex 2>/dev/null
total 5060
-rw-r--r-- 1 sipantichijk sipantichijk     295 Jun  2 16:14 design_issue.xml
-rw-r--r-- 1 sipantichijk sipantichijk     140 Jun  2 16:12 church_soc_cm.proj_state.ini
-rw-r--r-- 1 sipantichijk sipantichijk    1282 Jun  2 16:12 church_soc_cm.log
-rw-r--r-- 1 sipantichijk sipantichijk     431 Jun  2 16:12 church_soc_cm.pgm.out
-rw-r--r-- 1 sipantichijk sipantichijk  485742 Jun  2 15:45 church_soc_cm.vdb
-rw-r--r-- 1 sipantichijk sipantichijk 2922868 Jun  2 14:54 church_soc_cm.elab.vdb
-rw-r--r-- 1 sipantichijk sipantichijk    2102 Jun  2 14:28 church_soc_cm.route.rpt.xml
-rw-r--r-- 1 sipantichijk sipantichijk    9620 Jun  2 14:28 church_soc_cm.route.out
-rw-r--r-- 1 sipantichijk sipantichijk     625 Jun  2 14:28 church_soc_cm.route.rpt
-rw-r--r-- 1 sipantichijk sipantichijk     291 Jun  2 14:28 church_soc_cm.cdc.rpt
-rw-r--r-- 1 sipantichijk sipantichijk   14280 Jun  2 14:28 church_soc_cm.timing.rpt
PATCHED OK
  File "/home/sipantichijk/efinity/2026.1/scripts/efx_run_pt_unified.py", line 335
    design_api.export_periphery_timing_netlist(peri_pbn, peri_qdelay, peri_csi, peri_cdo)
    ^
IndentationError: expected an indented block after 'try' statement on line 334
Running: efx_run_pgm.py church_soc_cm --family Titanium --device Ti60F225 --output_dir outflow --work_dir work_pnr --opt mode=active width=1 enable_roms=smart spi_low_power_mode=on io_weak_pullup=on oscillator_clock_divider=DIV8 bitstream_compression=on enable_external_master_clock=off active_capture_clk_edge=posedge jtag_usercode=0xFFFFFFFF release_tri_then_reset=on
   pgm :        PASS 
sipantichijk@penguin:~/church_project/SoC$ 